<resources>
    <string name="app_name" translatable="false">Weathevent</string>


    <!-- Drawer content -->

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>


    <!--  Fragment name   -->

    <string name="fragment_log_in">LogIn</string>
    <string name="fragment_sign_in">SignIn</string>
    <string name="fragment_log_in_info">Information</string>
    <string name="fragment_dashboard">Dashboard</string>
    <string name="fragment_recommended">Recommend</string>
    <string name="fragment_explore">Explore</string>
    <string name="fragment_map">Map</string>
    <string name="fragment_weather">Weather</string>
    <string name="fragment_favourites">Favourites events</string>
    <string name="fragment_event">Event preview</string>
    <string name="fragment_friends">Friends</string>
    <string name="fragment_settings">Settings</string>


    <!-- Login Fragment -->

    <string name="login_ed_hint_username">Username</string>
    <string name="login_ed_hint_password">Password</string>
    <string name="login_cb_remember">Remember me</string>
    <string name="login_tv_signin">No account yet? Create one</string>
    <string name="hint_login">Login</string>

    <!-- Register Fragment -->
    <string name="register_success">You successfuly created account. Now you can login.</string>
    <string name="register_tv_login">Already a member? Login</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="create_account">Create Account</string>


    <!-- Descriptions -->
    <string name="logo_description">Description</string>
    <string name="label_tologin">Back to login</string>

    <!-- Categories -->
    <string name="category_101">Business &amp; Professional</string>
    <string name="category_102">Science &amp; Technology</string>
    <string name="category_103">Music</string>
    <string name="category_104">Film, Media &amp; Entertainment</string>
    <string name="category_105">Performing &amp; Visual Arts</string>
    <string name="category_106">Fashion &amp; Beauty</string>
    <string name="category_107">Health &amp; Wellness</string>
    <string name="category_108">Sports &amp; Fitness</string>
    <string name="category_109">Travel &amp; Outdoor</string>
    <string name="category_110">Food &amp; Drink</string>
    <string name="category_111">Charity &amp; Causes</string>
    <string name="category_112">Government &amp; Politics</string>
    <string name="category_113">Community &amp; Culture</string>
    <string name="category_114">Religion &amp; Spirituality</string>
    <string name="category_115">Family &amp; Education</string>
    <string name="category_116">Seasonal &amp; Holiday</string>
    <string name="category_117">Home &amp; Lifestyle</string>
    <string name="category_118">Auto, Boat &amp; Air</string>
    <string name="category_119">Hobbies &amp; Special Interest</string>
    <string name="category_120">School Activities</string>
    <string name="category_199">Other</string>
    <string name="button_distance">Distance</string>
    <string name="button_date">Date</string>
    <string name="button_partOfTime">When?</string>
    <string name="button_read_more">Read more</string>
    <string name="button_see_more">See more events</string>


    <string name="hint_select_city">Select city</string>
    <string name="search_event">Search Events</string>

    <!--Location -->
    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Please give us location permissions</string>
    <string name="ok">OK</string>

    <!--Weather -->
    <string name="current_conditions_text">Current Condition: </string>
    <string name="condition_icon">condition</string>
    <string name="temperature_text">Current Temperature</string>
    <string name="temperature_degree">temperature</string>
    <string name="clear_recommendation">Today is beautiful weather! Check our sport events for today</string>
    <string name="cloudy_recommendation">A little bit cloudy today. How about cultural events? </string>
    <string name="foggy_recommendation">Uff... Foggy weather. Be careful on the streets! It is the best time for spiritual events!</string>
    <string name="hazy_recommendation">Hazy today. The best time for Film, Media &amp; Entertainment</string>
    <string name="icy_recommendation">Icy today. How about Politics events to warm the atmosphere?</string>
    <string name="rainy_recommendation">Rainy now! Best time to eat something good!</string>
    <string name="snowy_recommendation">Let in snow! Let it snow! Let it snow!</string>
    <string name="stormy_recommendation">Stormy today. Good time for Family &amp; Education events</string>
    <string name="windy_recommendation">It is windy now. Good time for interesting meeting with...</string>
    <string name="unknown_recommendation">Time for your hobby! </string>

    <!--  Event preview   -->
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_date">Date</string>
    <string name="label_price">Price</string>
    <string name="label_rating">Rating</string>
    <string name="label_details">Details</string>

    <!-- weather fragment -->
    <string name="label_humidity">Humidity</string>
    <string name="label_rain">Rain</string>

    <string name="weather_clear">Clear</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_foggy">Foggy</string>
    <string name="weather_hazy">Hazy</string>
    <string name="weather_icy">Icy</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_snowy">Snowy</string>
    <string name="weather_stormy">Stormy</string>
    <string name="weather_windy">Windy</string>
    <string name="weather_unknown">Unknown</string>

    <!-- dialog add friends -->
    <string name="label_cancel">Cancel</string>
    <string name="label_accept">Accept</string>
    <string name="label_email">email@domain</string>
    <string name="label_addFriend">To add friend put his email below.</string>
    <string name="toast_friendNotFound">Friend not found</string>

    <string name="label_settings">Here you can set your preferences</string>
    <string name="label_pref_map">Map preferences</string>
    <string name="label_pref_events">Events preferences</string>
    <string name="hint_distance">Distance: 5000 (on meters please)</string>
    <string name="hint_city">City</string>
    <string name="user_added_successfully">User added successfully</string>
    <!-- login -->
    <string name="loginSuccessful">Welcome</string>
    <string name="loginWrong">Incorrect Login</string>
    <string name="createUserSuccessful">User created Successfully</string>
    <string name="CantcreateUser">this email is already register</string>
</resources>
