<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuitem_drawer_dashboard"
            android:checked="true"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home"

            />

        <item
            android:id="@+id/menuitem_drawer_friends"
            android:icon="@drawable/ic_friends_black"
            android:title="@string/friends" />

        <item
            android:id="@+id/menuitem_drawer_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings" />

    </group>

    <group android:menuCategory="system">

        <item
            android:id="@+id/menuitem_drawer_logout"
            android:icon="@drawable/ic_logout_black"
            android:title="@string/logout" />

    </group>

</menu>